Fixed a whitespace error on word wrapping for the tabs

--- a/themes/atheos/modules/active/_tabs.scss
+++ b/themes/atheos/modules/active/_tabs.scss
@@ -34,6 +34,7 @@
 			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 			padding-bottom: 1px;
 			cursor: inherit;
+			white-space: nowrap;
 
 			.file-name {
 				color: lighten($fontColorMinor, 20%);
